--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=(localdb)\\MSSQLLocalDB;database=vega;integrated security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
