--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "zone.js": "0.8.12"
   },
   "dependencies": {
+    "@types/underscore": "^1.8.8",
     "ng2-toasty": "^2.5.0",
-    "raven-js": "^3.24.1"
+    "raven-js": "^3.24.1",
+    "underscore": "^1.8.3"
   }
 }
