--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@types/underscore": "^1.8.8",
+    "font-awesome": "^4.7.0",
     "ng2-toasty": "^2.5.0",
     "raven-js": "^3.24.1",
     "underscore": "^1.8.3"
