--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Default": "server=(localdb)\\MSSQLLocalDB;database=vega;integrated security=SSPI;"
   },
+  "PhotoSettings": {
+    "MaxBytes": 10485760,
+    "AcceptedFileTypes": [".jpg", ".jpeg", ".png"]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
